tests/snapshots/integration_test__tests__asymmetric-keys-error.snap
---
source: tests/integration_test.rs
expression: e
---
[Registry module] Please check an implementation for following keys:
(v1) B
