tests/snapshots/integration_test__tests__bad-import-detections-error.snap
---
source: tests/integration_test.rs
expression: e
---
- [Rewriter] refused to proceed, found a name whitelabel but difference import @./src/index.tsx
