tests/snapshots/integration_test__tests__basic-usages.snap
---
source: tests/integration_test.rs
expression: idempt_output
---
--- app/home/_components/heading.tsx ---
import { FC } from "react";

// whitelabel *
export const Heading: FC = () => <h1>Heading</h1>;


--- app/home/page.tsx ---
import whitelabel from "../whitelabel";
import { Heading } from "./_components/heading";
/**
 * The most formal `whitelabel` marker
 */ // whitelabel: for=variant1, key=BG_COLOR
export const variant1_bgClassname: string = "bg-red-100";
/**
 * If `for` is omitted, it will default to your `default_target` config
 */ // whitelabel
export const BG_COLOR: string = "bg-red-200";
/**
 * The most natural `whitelabel` marker
 * `as` works the same way as `key`, excepts you can omits `=`.
 */ // whitelabel for 'variant2' as 'BG_COLOR'
export const variant2_bgClassname: string = "bg-red-300";
/**
 * Or
 * (Not recommended, hard to read)
 */ // whitelabel for variant3 as BG_COLOR
export const variant3_bgClassname: string = "bg-red-400";
/**
 * Or
 */ // whitelabel for 'variant4' as='BG_COLOR'
export const variant4_bgClassname: string = "bg-red-400";
const Homepage = () => (
  <div className={`h-full w-full ${whitelabel.BG_COLOR}`}>
    <whitelabel.Heading />
  </div>
);
export default Homepage;


--- app/variant1.const.tsx ---
import { FC } from "react";

// whitelabel for=variant1
export const Heading: FC = () => <h1>Variant1 Heading</h1>;


--- app/whitelabel/def.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get BG_COLOR(): WhitelabelConfig["BG_COLOR"] {
    return require("../home/page").BG_COLOR;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../home/_components/heading").Heading;
  }
}

export default whitelabel;


--- app/whitelabel/index.ts ---
/**
 * 🎨 WHITELABEL RESOLUTION ENTRY POINT
 * * Unlike the `*.generated.tsx` files in this directory, this file is YOURS to edit!
 * `wl-extractor` generated this as a starter template. You should customize the
 * logic here to match how your application determines the current tenant/brand.
 * * By default, this uses a static, build-time environment variable.
 */

import { type Variants, Whitelabel, type WhitelabelConfig } from "./whitelabel";

// --- Default Strategy: Build-time Environment Variable ---
const currentWhitelabel = (() => {
  // Fallback to 'def' (or your project's default) if the env var is missing
  const variant = (process.env.NEXT_PUBLIC_WHITELABEL as Variants) || "def";
  return new Whitelabel()[variant];
})();

// ! The default export MUST satisfy the `WhitelabelConfig` interface.
// This ensures that wherever you `import whitelabel from '...'`, it is strictly typed.
export default currentWhitelabel satisfies WhitelabelConfig;

export { type Variants, type WhitelabelConfig };

/* * ============================================================================
 * 💡 IDEAS FOR ADVANCED CUSTOM LOGIC
 * ============================================================================
 * * 1. React Context & Hooks (Client-Side Dynamic)
 * ----------------------------------------------------------------------------
 * If your app switches brands dynamically in the browser (e.g., a dropdown),
 * export a hook to access the current config:
 * * export const useWhitelabel = (): WhitelabelConfig => {
 * // e.g., Read from Redux, Zustand, or React Context
 * const currentTenant = useTenantStore((state) => state.tenant);
 * return new Whitelabel()[currentTenant as Variants];
 * };
 * * * 2. Next.js App Router / SSR (Per-Request Whitelabeling)
 * ----------------------------------------------------------------------------
 * If you are hosting multiple tenants on a single Node server, `process.env`
 * won't work. Instead, resolve the brand based on the request headers or URL:
 * * import { headers } from 'next/headers';
 * * export const getServerWhitelabel = (): WhitelabelConfig => {
 * const host = headers().get('host');
 * const variant = host?.includes('brand-a') ? 'brandA' : 'def';
 * return new Whitelabel()[variant as Variants];
 * };
 * ============================================================================
 */


--- app/whitelabel/variant1.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get BG_COLOR(): WhitelabelConfig["BG_COLOR"] {
    return require("../home/page").variant1_bgClassname;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../variant1.const").Heading;
  }
}

export default whitelabel;


--- app/whitelabel/variant2.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get BG_COLOR(): WhitelabelConfig["BG_COLOR"] {
    return require("../home/page").variant2_bgClassname;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../home/_components/heading").Heading;
  }
}

export default whitelabel;


--- app/whitelabel/variant3.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get BG_COLOR(): WhitelabelConfig["BG_COLOR"] {
    return require("../home/page").variant3_bgClassname;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../home/_components/heading").Heading;
  }
}

export default whitelabel;


--- app/whitelabel/variant4.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get BG_COLOR(): WhitelabelConfig["BG_COLOR"] {
    return require("../home/page").variant4_bgClassname;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../home/_components/heading").Heading;
  }
}

export default whitelabel;


--- app/whitelabel/whitelabel.ts ---
/* eslint-disable @typescript-eslint/no-require-imports */
// AUTO-GENERATED: DO NOT EDIT
import type { BG_COLOR as def_f5ddee806ca95ade } from "../home/page";
import type { variant1_bgClassname as variant1_93de170be0ce975c } from "../home/page";
import type { variant2_bgClassname as variant2_d84b71ffdf9f5fcd } from "../home/page";
import type { variant3_bgClassname as variant3_fa79c0168dc71b7 } from "../home/page";
import type { variant4_bgClassname as variant4_ff373c3ac713a727 } from "../home/page";
import type { Heading as def_cce35f3890d1b666 } from "../home/_components/heading";
import type { Heading as variant1_35f9b289efdadf9f } from "../variant1.const";
import type { Heading as variant2_cce35f3890d1b666 } from "../home/_components/heading";
import type { Heading as variant3_cce35f3890d1b666 } from "../home/_components/heading";
import type { Heading as variant4_cce35f3890d1b666 } from "../home/_components/heading";
export interface WhitelabelConfig {
  /**
   * ### 🏷️ Available for: {@link def_f5ddee806ca95ade | `def`} | {@link variant1_93de170be0ce975c | `variant1`} | {@link variant2_d84b71ffdf9f5fcd | `variant2`} | {@link variant3_fa79c0168dc71b7 | `variant3`} | {@link variant4_ff373c3ac713a727 | `variant4`}
   * @copyright **def**
   * @default
   * ```tsx
   * "bg-red-200"
   * ```
   */
  BG_COLOR: typeof def_f5ddee806ca95ade | typeof variant1_93de170be0ce975c | typeof variant2_d84b71ffdf9f5fcd | typeof variant3_fa79c0168dc71b7 | typeof variant4_ff373c3ac713a727;
  /**
   * ### 🏷️ Available for: {@link def_cce35f3890d1b666 | `def`} | {@link variant1_35f9b289efdadf9f | `variant1`} | {@link variant2_cce35f3890d1b666 | `variant2`} | {@link variant3_cce35f3890d1b666 | `variant3`} | {@link variant4_cce35f3890d1b666 | `variant4`}
   * @copyright **def**
   * @default
   * ```tsx
   * () => <h1>Heading</h1>
   * ```
   */
  Heading: typeof def_cce35f3890d1b666 | typeof variant1_35f9b289efdadf9f | typeof variant2_cce35f3890d1b666 | typeof variant3_cce35f3890d1b666 | typeof variant4_cce35f3890d1b666;
}
export type Variants = "def" | "variant1" | "variant2" | "variant3" | "variant4";

export class Whitelabel implements Record<Variants, WhitelabelConfig> {
  public get def(): WhitelabelConfig {
    const VariantConfig = require("./def.generated").default;
    return new VariantConfig();
  }
  public get variant1(): WhitelabelConfig {
    const VariantConfig = require("./variant1.generated").default;
    return new VariantConfig();
  }
  public get variant2(): WhitelabelConfig {
    const VariantConfig = require("./variant2.generated").default;
    return new VariantConfig();
  }
  public get variant3(): WhitelabelConfig {
    const VariantConfig = require("./variant3.generated").default;
    return new VariantConfig();
  }
  public get variant4(): WhitelabelConfig {
    const VariantConfig = require("./variant4.generated").default;
    return new VariantConfig();
  }
}


--- tsconfig.json ---
{
  "compilerOptions": {
    "jsx": "react-jsx",
    "paths": {}
  }
}


--- whitelabel.config.json ---
{
  "src": "app/",
  "patterns": ["**/*.tsx", "**/*.ts"],
  "output_dir": "whitelabel",
  "default_target": "def",
  "tsconfig": "tsconfig.json"
}
