tests/snapshots/integration_test__tests__closing-jsx-manifest.snap
---
source: tests/integration_test.rs
expression: manifest_output
---
{
  "Button": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Button",
            "import_path": "src/index.tsx",
            "line": 23
          }
        },
        "inline_impl": "_Button"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "Button",
            "import_path": "src/wl.mar.tsx",
            "line": 15
          }
        },
        "inline_impl": "({ children }) => (\n  <button className=\"text-lg\">{children}</button>\n)"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 28,
        "column": 21
      }
    ]
  },
  "Footer": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Footer",
            "import_path": "src/index.tsx",
            "line": 18
          }
        },
        "inline_impl": "_Footer"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "Footer",
            "import_path": "src/wl.mar.tsx",
            "line": 12
          }
        },
        "inline_impl": "() => <p>Contact Them!</p>"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 31,
        "column": 5
      }
    ]
  },
  "Heading": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Heading",
            "import_path": "src/index.tsx",
            "line": 6
          }
        },
        "inline_impl": "_Heading"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "MarHeading",
            "import_path": "src/wl.mar.tsx",
            "line": 4
          }
        },
        "inline_impl": "({ children }) => <h2>{children}</h2>"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 27,
        "column": 5
      }
    ]
  },
  "Layout": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Layout",
            "import_path": "src/index.tsx",
            "line": 13
          }
        },
        "inline_impl": "_Layout"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "Layout",
            "import_path": "src/wl.mar.tsx",
            "line": 7
          }
        },
        "inline_impl": "({ children }) => (\n  <div className=\"bg-green-500\">{children}</div>\n)"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 26,
        "column": 3
      }
    ]
  }
}
