tests/snapshots/integration_test__tests__closing-jsx.snap
---
source: tests/integration_test.rs
expression: final_output
---
--- src/index.tsx ---
import whitelabel from "./whitelabel";
import React from "react";
const _Heading: React.FC = ({ children }) => <h1>{children}</h1>;
// whitelabel key=Heading
export const Heading = _Heading;
const _Layout: React.FC = ({ children }) => <div className="bg-red-500">{children}</div>;
// whitelabel
export const Layout = _Layout;
const _Footer: React.FC = () => <p>Contact Us!</p>;
// whitelabel
export const Footer = _Footer;
const _Button: React.FC = ({ children }) => <button>{children}</button>;
// whitelabel
export const Button = _Button;
const App = () => (
  <whitelabel.Layout>
    <whitelabel.Heading>
      Hello, World! <whitelabel.Button>Click me!</whitelabel.Button>
    </whitelabel.Heading>

    <whitelabel.Footer />
  </whitelabel.Layout>
);


--- src/whitelabel/def.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get Button(): WhitelabelConfig["Button"] {
    return require("../index").Button;
  }
  public get Footer(): WhitelabelConfig["Footer"] {
    return require("../index").Footer;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../index").Heading;
  }
  public get Layout(): WhitelabelConfig["Layout"] {
    return require("../index").Layout;
  }
}

export default whitelabel;


--- src/whitelabel/index.ts ---
/**
 * 🎨 WHITELABEL RESOLUTION ENTRY POINT
 * * Unlike the `*.generated.tsx` files in this directory, this file is YOURS to edit!
 * `wl-extractor` generated this as a starter template. You should customize the
 * logic here to match how your application determines the current tenant/brand.
 * * By default, this uses a static, build-time environment variable.
 */

import { type Variants, Whitelabel, type WhitelabelConfig } from "./whitelabel";

// --- Default Strategy: Build-time Environment Variable ---
const currentWhitelabel = (() => {
  // Fallback to 'def' (or your project's default) if the env var is missing
  const variant = (process.env.NEXT_PUBLIC_WHITELABEL as Variants) || "def";
  return new Whitelabel()[variant];
})();

// ! The default export MUST satisfy the `WhitelabelConfig` interface.
// This ensures that wherever you `import whitelabel from '...'`, it is strictly typed.
export default currentWhitelabel satisfies WhitelabelConfig;

export { type Variants, type WhitelabelConfig };

/* * ============================================================================
 * 💡 IDEAS FOR ADVANCED CUSTOM LOGIC
 * ============================================================================
 * * 1. React Context & Hooks (Client-Side Dynamic)
 * ----------------------------------------------------------------------------
 * If your app switches brands dynamically in the browser (e.g., a dropdown),
 * export a hook to access the current config:
 * * export const useWhitelabel = (): WhitelabelConfig => {
 * // e.g., Read from Redux, Zustand, or React Context
 * const currentTenant = useTenantStore((state) => state.tenant);
 * return new Whitelabel()[currentTenant as Variants];
 * };
 * * * 2. Next.js App Router / SSR (Per-Request Whitelabeling)
 * ----------------------------------------------------------------------------
 * If you are hosting multiple tenants on a single Node server, `process.env`
 * won't work. Instead, resolve the brand based on the request headers or URL:
 * * import { headers } from 'next/headers';
 * * export const getServerWhitelabel = (): WhitelabelConfig => {
 * const host = headers().get('host');
 * const variant = host?.includes('brand-a') ? 'brandA' : 'def';
 * return new Whitelabel()[variant as Variants];
 * };
 * ============================================================================
 */


--- src/whitelabel/manifest.json ---
{
  "Button": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Button",
            "import_path": "index.tsx",
            "line": 23
          }
        },
        "inline_impl": "_Button"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "Button",
            "import_path": "wl.mar.tsx",
            "line": 15
          }
        },
        "inline_impl": "({ children }) => (\n  <button className=\"text-lg\">{children}</button>\n)"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 28,
        "column": 21
      }
    ]
  },
  "Footer": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Footer",
            "import_path": "index.tsx",
            "line": 18
          }
        },
        "inline_impl": "_Footer"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "Footer",
            "import_path": "wl.mar.tsx",
            "line": 12
          }
        },
        "inline_impl": "() => <p>Contact Them!</p>"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 31,
        "column": 5
      }
    ]
  },
  "Heading": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Heading",
            "import_path": "index.tsx",
            "line": 6
          }
        },
        "inline_impl": "_Heading"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "MarHeading",
            "import_path": "wl.mar.tsx",
            "line": 4
          }
        },
        "inline_impl": "({ children }) => <h2>{children}</h2>"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 27,
        "column": 5
      }
    ]
  },
  "Layout": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "Layout",
            "import_path": "index.tsx",
            "line": 13
          }
        },
        "inline_impl": "_Layout"
      },
      "mar": {
        "symbol": {
          "Symbol": {
            "symbol": "Layout",
            "import_path": "wl.mar.tsx",
            "line": 7
          }
        },
        "inline_impl": "({ children }) => (\n  <div className=\"bg-green-500\">{children}</div>\n)"
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 26,
        "column": 3
      }
    ]
  }
}

--- src/whitelabel/mar.generated.tsx ---
/* eslint-disable @typescript-eslint/no-require-imports */

// AUTO-GENERATED: DO NOT EDIT

import type { WhitelabelConfig } from "./whitelabel";
export class whitelabel implements WhitelabelConfig {
  public get Button(): WhitelabelConfig["Button"] {
    return require("../wl.mar").Button;
  }
  public get Footer(): WhitelabelConfig["Footer"] {
    return require("../wl.mar").Footer;
  }
  public get Heading(): WhitelabelConfig["Heading"] {
    return require("../wl.mar").MarHeading;
  }
  public get Layout(): WhitelabelConfig["Layout"] {
    return require("../wl.mar").Layout;
  }
}

export default whitelabel;


--- src/whitelabel/whitelabel.ts ---
/* eslint-disable @typescript-eslint/no-require-imports */
// AUTO-GENERATED: DO NOT EDIT
import type { Button as def_cd7cef77922e9d45 } from "../index";
import type { Button as mar_4bb3d0fc40d972c } from "../wl.mar";
import type { Footer as def_7d16cea1c59f887a } from "../index";
import type { Footer as mar_f93683f6c39c9f21 } from "../wl.mar";
import type { Heading as def_773d8262180994a9 } from "../index";
import type { MarHeading as mar_d429983f84da20dd } from "../wl.mar";
import type { Layout as def_18b1d93120a3c332 } from "../index";
import type { Layout as mar_ebd4517c2b1cd9b5 } from "../wl.mar";
export interface WhitelabelConfig {
  /**
   * ### 🏷️ Available for: {@link def_cd7cef77922e9d45 | `def`} | {@link mar_4bb3d0fc40d972c | `mar`}
   * @copyright **def**
   * @default
   * ```tsx
   * _Button
   * ```
   */
  Button: typeof def_cd7cef77922e9d45 | typeof mar_4bb3d0fc40d972c;
  /**
   * ### 🏷️ Available for: {@link def_7d16cea1c59f887a | `def`} | {@link mar_f93683f6c39c9f21 | `mar`}
   * @copyright **def**
   * @default
   * ```tsx
   * _Footer
   * ```
   */
  Footer: typeof def_7d16cea1c59f887a | typeof mar_f93683f6c39c9f21;
  /**
   * ### 🏷️ Available for: {@link def_773d8262180994a9 | `def`} | {@link mar_d429983f84da20dd | `mar`}
   * @copyright **def**
   * @default
   * ```tsx
   * _Heading
   * ```
   */
  Heading: typeof def_773d8262180994a9 | typeof mar_d429983f84da20dd;
  /**
   * ### 🏷️ Available for: {@link def_18b1d93120a3c332 | `def`} | {@link mar_ebd4517c2b1cd9b5 | `mar`}
   * @copyright **def**
   * @default
   * ```tsx
   * _Layout
   * ```
   */
  Layout: typeof def_18b1d93120a3c332 | typeof mar_ebd4517c2b1cd9b5;
}
export type Variants = "def" | "mar";

export class Whitelabel implements Record<Variants, WhitelabelConfig> {
  public get def(): WhitelabelConfig {
    const VariantConfig = require("./def.generated").default;
    return new VariantConfig();
  }
  public get mar(): WhitelabelConfig {
    const VariantConfig = require("./mar.generated").default;
    return new VariantConfig();
  }
}


--- src/wl.mar.tsx ---
import React from "react";

// whitelabel for=mar, key=Heading
export const MarHeading: React.FC = ({ children }) => <h2>{children}</h2>;

// whitelabel for=mar
export const Layout: React.FC = ({ children }) => <div className="bg-green-500">{children}</div>;

// whitelabel for=mar
export const Footer: React.FC = () => <p>Contact Them!</p>;

// whitelabel for=mar
export const Button: React.FC = ({ children }) => <button className="text-lg">{children}</button>;


--- tsconfig.json ---
{
  "compilerOptions": {
    "jsx": "react-jsx",
    "paths": {}
  }
}


--- whitelabel.config.json ---
{
  "src": "src/",
  "patterns": ["**/*.tsx", "**/*.ts"],
  "output_dir": "whitelabel",
  "default_target": "def",
  "tsconfig": "tsconfig.json"
}
