tests/snapshots/integration_test__tests__duplicate-keys-error.snap
---
source: tests/integration_test.rs
expression: e
---
Error: duplicate key found ("def", "Heading")
