tests/snapshots/integration_test__tests__foo_repo.snap
---
source: tests/integration_test.rs
expression: final_output
---
--- app/(front-page)/(public)/products/_components/products-banner-section.tsx ---
"use client";
// @ts-ignore
import clientEnv from "dummy";

// whitelabel key=pro
export const ecommerce_product_intro = `ผลิตภัณฑ์เวชสำอางที่ได้รับการพัฒนาคนเก่ง คนเจ๋ง
ปัจจุบันนังเกอร์ตัวดีมีผลิตภัณฑ์เกี่ยวกับ Hair & Skin Care Products
ที่พร้อมเข้ามาจิกหัวและฟื้นฟูผิวอย่างอ่อนโยน
ตอบโจทย์ความต้องการตั้งแต่การดูแลหนังศีรษะ, การปกป้องผิวจากแสงแดด,
การบำรุงผิวมือและเล็บ, ฟื้นบำรุงปราการผิวทั่วร่างกาย
เพื่อความชุ่มชื้นอย่างเป็นธรรมชาติ เหมาะกับทุกสภาพผิว`;
// whitelabel key=bak
export const ecommerce_product_bannerImage = `${clientEnv.NEXT_PUBLIC_IMAGE_URL}/products/products-banner.webp`;


--- app/(front-page)/(public)/products/page.tsx ---
import whitelabel from "../../../whitelabel";
import {
  ecommerce_product_bannerImage,
  ecommerce_product_intro,
} from "./_components/products-banner-section";
const Page = () => (
  <div
    style={{
      backgroundImage: whitelabel.bak,
    }}
  >
    <p>{whitelabel.pro}</p>
  </div>
);


--- app/whitelabel/bunny.generated.tsx ---
// AUTO-GENERATED: DO NOT EDIT

import { ecommerce_product_bannerImage } from "../(front-page)/(public)/products/_components/products-banner-section";
import { ecommerce_product_intro } from "../(front-page)/(public)/products/_components/products-banner-section";

const whitelabel = {
  /**
   * ### 🏷️ Tenant: `bunny`
   *
   * **from `../(front-page)/(public)/products/_components/products-banner-section`**
   *
   * Go to {@link ecommerce_product_bannerImage | implementation}.
   * @default
   * ```tsx
   * `${clientEnv.NEXT_PUBLIC_IMAGE_URL}/products/products-banner.webp`
   * ```
   *
   */
  bak: ecommerce_product_bannerImage,
  /**
   * ### 🏷️ Tenant: `bunny`
   *
   * **from `../(front-page)/(public)/products/_components/products-banner-section`**
   *
   * Go to {@link ecommerce_product_intro | implementation}.
   * @default
   * ```tsx
   * `ผลิตภัณฑ์เวชสำอางที่ได้รับการพัฒนาคนเก่ง คนเจ๋ง
   * ปัจจุบันนังเกอร์ตัวดีมีผลิตภัณฑ์เกี่ยวกับ Hair & Skin Care Products
   * ที่พร้อมเข้ามาจิกหัวและฟื้นฟูผิวอย่างอ่อนโยน
   * ตอบโจทย์ความต้องการตั้งแต่การดูแลหนังศีรษะ, การปกป้องผิวจากแสงแดด,
   * การบำรุงผิวมือและเล็บ, ฟื้นบำรุงปราการผิวทั่วร่างกาย
   * เพื่อความชุ่มชื้นอย่างเป็นธรรมชาติ เหมาะกับทุกสภาพผิว`
   * ```
   *
   */
  pro: ecommerce_product_intro,
};

export default whitelabel;


--- app/whitelabel/determine-whitelabel.ts ---
// THIS MODULE IS FOR CUSTOM LOGIC TO DETERMINE CURRENT WHITELABEL
// TODO: possibility for HTTP per-request whitelabel

import type { Whitelabel } from ".";

const currentWhitelabel =
  (process.env.NEXT_PUBLIC_WHITELABEL as Whitelabel) || "bunny";

// ! exported result have to be `satisfies Whitelabel`
export default currentWhitelabel satisfies Whitelabel;


--- app/whitelabel/index.ts ---
/* eslint-disable @typescript-eslint/no-require-imports */
// AUTO-GENERATED: DO NOT EDIT
import __current from "./determine-whitelabel";
import type bunny from "./bunny.generated";
export type WhitelabelConfig = typeof bunny;
export type Whitelabel = "bunny";

const configs: Record<Whitelabel, WhitelabelConfig> = {
  bunny: require("./bunny.generated").default,
};

export default configs[__current];


--- tsconfig.json ---
{
  "compilerOptions": {
    "jsx": "react-jsx",
    "paths": {
      "@app/*": ["./src/*"]
    }
  }
}


--- whitelabel.config.json ---
{
  "src": "app/",
  "patterns": ["**/*.tsx", "**/*.ts"],
  "output_dir": "whitelabel",
  "default_target": "bunny",
  "tsconfig": "tsconfig.json"
}
