tests/snapshots/integration_test__tests__import-detections-manifest.snap
---
source: tests/integration_test.rs
expression: manifest_output
---
{
  "flag_is_enable": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "flag_is_enable",
            "import_path": "src/index.tsx",
            "line": 9
          }
        },
        "inline_impl": "true"
      }
    },
    "usages": []
  },
  "replacable_title": {
    "variants": {
      "def": {
        "symbol": {
          "Symbol": {
            "symbol": "replacable_title",
            "import_path": "src/index.tsx",
            "line": 4
          }
        },
        "inline_impl": "\"TITLE\""
      }
    },
    "usages": [
      {
        "file": "./src/index.tsx",
        "line": 6,
        "column": 12
      }
    ]
  }
}
